# Blog-FastAPI

./: .env  Dockerfile  README.md  config-template.yml  config.yaml  docker-compose.yml  pyproject.toml
src/app/: asgi.py  main.py  models.py
src/app/alembic/: env.py
src/app/alembic/versions/: 1d3108ca88ee_add_initial_categories.py  e6fb6e1a8803_initial_migration.py
src/app/core/: config.py  database.py
src/app/domain/: enums.py
src/app/resources/: categories_router.py  posts_router.py  user_router.py
src/app/schemas/: shemas.py
src/app/services/: auth.py  elasticsearch.py
src/app/tasks/: celery.py  email_templates.py  tasks.py
src/docker/: app.sh  celery.sh
